--- a/map.html
+++ b/map.html
@@ -19,6 +19,9 @@
 			<ul>  
 				<li><a href="index.html" target="_blanck">index</a></li> 
 				<li><a href="contacts.html" target="_blanck">contacts</a></li>
+				<li><a href="projects.html" target="_blanck">projects</a></li>
+				<li><a href="services.html" target="_blanck">services</a></li>
+				<li><a href="team.html" target="_blanck">team</a></li>
 			</ul> 
 		</div> 
 	</div>  
