--- a/projects.html
+++ b/projects.html
@@ -120,7 +120,7 @@
 						<div class="swiper-slide">
 							<div class="content-slide">
 								<div class="row align-items-center">
-									<div class="col-6">
+									<div class="col-md-6 col-5">
 										<div class="title-small">La Vita коттеджный поселок</div>
 										<div class="features-wrap">
 											<div class="item-feature">
@@ -153,7 +153,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="col-6">
+									<div class="col-md-6 col-7">
 										<div class="image-slide">
 											<img src="img/project1_1.jpg" alt="alt">
 										</div>
@@ -164,14 +164,14 @@
 						<div class="swiper-slide">
 							<div class="content-slide">
 								<div class="row align-items-center">
-									<div class="col-6">
+									<div class="col-md-6 col-5">
 										<div class="title-small">О проекте</div>
 										<div class="text-slide">
 											<p>Концептуальный коттеджный поселок бизнес-класса в Крыму на берегу моря у подножия горы Кастель. </p>
 											<p>Всего предусмотрено 56 таунхаусов в едином средиземноморском стиле. Каждый таунхаус имеет собственные патио и балконы. Вся инфраструктура продумана таким образом, чтобы каждый день выбирать отдых по душе.</p>
 										</div>
 									</div>
-									<div class="col-6">
+									<div class="col-md-6 col-7">
 										<div class="image-slide">
 											<img src="img/project1_2.jpg" alt="alt">
 										</div>
@@ -182,14 +182,14 @@
 						<div class="swiper-slide">
 							<div class="content-slide">
 								<div class="row align-items-center">
-									<div class="col-6">
+									<div class="col-md-6 col-5">
 										<div class="title-small">какую работу провели</div>
 										<div class="text-slide">
 											<p>Равным образом, постоянный количественный рост и сфера нашей активности обеспечивает актуальность анализа существующих паттернов поведения. </p>
 											<p>Как принято считать, представители современных социальных резервов формируют глобальную экономическую сеть и при этом — объявлены нарушающими общечеловеческие нормы этики и морали.</p>
 										</div>
 									</div>
-									<div class="col-6">
+									<div class="col-md-6 col-7">
 										<div class="image-slide">
 											<img src="img/project1_3.jpg" alt="alt">
 										</div>
@@ -206,7 +206,7 @@
 						<div class="swiper-slide">
 							<div class="content-slide">
 								<div class="row align-items-center">
-									<div class="col-6">
+									<div class="col-md-6 col-5">
 										<div class="title-small">soft проект</div>
 										<div class="features-wrap">
 											<div class="item-feature">
@@ -239,7 +239,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="col-6">
+									<div class="col-md-6 col-7">
 										<div class="image-slide">
 											<img src="img/project2_1.jpg" alt="alt">
 										</div>
@@ -250,14 +250,14 @@
 						<div class="swiper-slide">
 							<div class="content-slide">
 								<div class="row align-items-center">
-									<div class="col-6">
+									<div class="col-md-6 col-5">
 										<div class="title-small">О проекте</div>
 										<div class="text-slide">
 											<p>Концептуальный коттеджный поселок бизнес-класса в Крыму на берегу моря у подножия горы Кастель. </p>
 											<p>Всего предусмотрено 56 таунхаусов в едином средиземноморском стиле. Каждый таунхаус имеет собственные патио и балконы. Вся инфраструктура продумана таким образом, чтобы каждый день выбирать отдых по душе.</p>
 										</div>
 									</div>
-									<div class="col-6">
+									<div class="col-md-6 col-7">
 										<div class="image-slide">
 											<img src="img/project1_2.jpg" alt="alt">
 										</div>
@@ -268,14 +268,14 @@
 						<div class="swiper-slide">
 							<div class="content-slide">
 								<div class="row align-items-center">
-									<div class="col-6">
+									<div class="col-md-6 col-5">
 										<div class="title-small">какую работу провели</div>
 										<div class="text-slide">
 											<p>Равным образом, постоянный количественный рост и сфера нашей активности обеспечивает актуальность анализа существующих паттернов поведения. </p>
 											<p>Как принято считать, представители современных социальных резервов формируют глобальную экономическую сеть и при этом — объявлены нарушающими общечеловеческие нормы этики и морали.</p>
 										</div>
 									</div>
-									<div class="col-6">
+									<div class="col-md-6 col-7">
 										<div class="image-slide">
 											<img src="img/project1_3.jpg" alt="alt">
 										</div>
@@ -292,7 +292,7 @@
 						<div class="swiper-slide">
 							<div class="content-slide">
 								<div class="row align-items-center">
-									<div class="col-6">
+									<div class="col-md-6 col-5">
 										<div class="title-small">La Vita коттеджный поселок</div>
 										<div class="features-wrap">
 											<div class="item-feature">
@@ -325,7 +325,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="col-6">
+									<div class="col-md-6 col-7">
 										<div class="image-slide">
 											<img src="img/project1_1.jpg" alt="alt">
 										</div>
@@ -336,14 +336,14 @@
 						<div class="swiper-slide">
 							<div class="content-slide">
 								<div class="row align-items-center">
-									<div class="col-6">
+									<div class="col-md-6 col-5">
 										<div class="title-small">О проекте</div>
 										<div class="text-slide">
 											<p>Концептуальный коттеджный поселок бизнес-класса в Крыму на берегу моря у подножия горы Кастель. </p>
 											<p>Всего предусмотрено 56 таунхаусов в едином средиземноморском стиле. Каждый таунхаус имеет собственные патио и балконы. Вся инфраструктура продумана таким образом, чтобы каждый день выбирать отдых по душе.</p>
 										</div>
 									</div>
-									<div class="col-6">
+									<div class="col-md-6 col-7">
 										<div class="image-slide">
 											<img src="img/project1_2.jpg" alt="alt">
 										</div>
@@ -354,14 +354,14 @@
 						<div class="swiper-slide">
 							<div class="content-slide">
 								<div class="row align-items-center">
-									<div class="col-6">
+									<div class="col-md-6 col-5">
 										<div class="title-small">какую работу провели</div>
 										<div class="text-slide">
 											<p>Равным образом, постоянный количественный рост и сфера нашей активности обеспечивает актуальность анализа существующих паттернов поведения. </p>
 											<p>Как принято считать, представители современных социальных резервов формируют глобальную экономическую сеть и при этом — объявлены нарушающими общечеловеческие нормы этики и морали.</p>
 										</div>
 									</div>
-									<div class="col-6">
+									<div class="col-md-6 col-7">
 										<div class="image-slide">
 											<img src="img/project1_3.jpg" alt="alt">
 										</div>
