--- a/services.html
+++ b/services.html
@@ -74,13 +74,13 @@
 						<div class="swiper-slide">
 							<div class="content-slide">
 								<div class="row align-items-center">
-									<div class="col-6">
+									<div class="col-md-6 col-5">
 										<div class="title-small">ПРОЕКТНАЯ ДОКУМЕНТАЦИЯ, РАЗДЕЛЫ: <br>ПЗ, ПЗУ, АР, КР, ИОС</div>
 										<div class="text-slide">
 											<p>Стадия П разрабатывается для определения основных решений, сметной стоимости объекта, объемов работ и используемых при строительстве материалах, конструкциях, оборудовании. Условием для работы над проектной документацией является наличие задания на проектирование и исходно-разрешительной документации; в свою очередь, стадия П служит основой для рабочей документации (стадии РД). Согласование в государственных органах производится на основании проектной документации.</p>
 										</div>
 									</div>
-									<div class="col-6">
+									<div class="col-md-6 col-7">
 										<div class="image-slide">
 											<img src="img/service1.jpg" alt="alt">
 										</div>
@@ -91,53 +91,13 @@
 						<div class="swiper-slide">
 							<div class="content-slide">
 								<div class="row align-items-center">
-									<div class="col-6">
+									<div class="col-md-6 col-5">
 										<div class="title-small">ПРОЕКТНАЯ ДОКУМЕНТАЦИЯ, РАЗДЕЛЫ: <br>ПЗ, ПЗУ, АР, КР, ИОС</div>
 										<div class="text-slide">
 											<p>Стадия П разрабатывается для определения основных решений, сметной стоимости объекта, объемов работ и используемых при строительстве материалах, конструкциях, оборудовании. Условием для работы над проектной документацией является наличие задания на проектирование и исходно-разрешительной документации; в свою очередь, стадия П служит основой для рабочей документации (стадии РД). Согласование в государственных органах производится на основании проектной документации.</p>
 										</div>
 									</div>
-									<div class="col-6">
-										<div class="image-slide">
-											<img src="img/service1.jpg" alt="alt">
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="btn-swipe swiper-button-prev"></div>
-					<div class="btn-swipe swiper-button-next"></div>
-				</div>
-				<div class="swiper swiper-card">
-					<div class="swiper-wrapper">
-						<div class="swiper-slide">
-							<div class="content-slide">
-								<div class="row align-items-center">
-									<div class="col-6">
-										<div class="title-small">ПРОЕКТНАЯ ДОКУМЕНТАЦИЯ, РАЗДЕЛЫ: <br>ПЗ, ПЗУ, АР, КР, ИОС</div>
-										<div class="text-slide">
-											<p>Стадия П разрабатывается для определения основных решений, сметной стоимости объекта, объемов работ и используемых при строительстве материалах, конструкциях, оборудовании. Условием для работы над проектной документацией является наличие задания на проектирование и исходно-разрешительной документации; в свою очередь, стадия П служит основой для рабочей документации (стадии РД). Согласование в государственных органах производится на основании проектной документации.</p>
-										</div>
-									</div>
-									<div class="col-6">
-										<div class="image-slide">
-											<img src="img/service1.jpg" alt="alt">
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="content-slide">
-								<div class="row align-items-center">
-									<div class="col-6">
-										<div class="title-small">ПРОЕКТНАЯ ДОКУМЕНТАЦИЯ, РАЗДЕЛЫ: <br>ПЗ, ПЗУ, АР, КР, ИОС</div>
-										<div class="text-slide">
-											<p>Стадия П разрабатывается для определения основных решений, сметной стоимости объекта, объемов работ и используемых при строительстве материалах, конструкциях, оборудовании. Условием для работы над проектной документацией является наличие задания на проектирование и исходно-разрешительной документации; в свою очередь, стадия П служит основой для рабочей документации (стадии РД). Согласование в государственных органах производится на основании проектной документации.</p>
-										</div>
-									</div>
-									<div class="col-6">
+									<div class="col-md-6 col-7">
 										<div class="image-slide">
 											<img src="img/service1.jpg" alt="alt">
 										</div>
@@ -154,13 +114,13 @@
 						<div class="swiper-slide">
 							<div class="content-slide">
 								<div class="row align-items-center">
-									<div class="col-6">
+									<div class="col-md-6 col-5">
 										<div class="title-small">ПРОЕКТНАЯ ДОКУМЕНТАЦИЯ, РАЗДЕЛЫ: <br>ПЗ, ПЗУ, АР, КР, ИОС</div>
 										<div class="text-slide">
 											<p>Стадия П разрабатывается для определения основных решений, сметной стоимости объекта, объемов работ и используемых при строительстве материалах, конструкциях, оборудовании. Условием для работы над проектной документацией является наличие задания на проектирование и исходно-разрешительной документации; в свою очередь, стадия П служит основой для рабочей документации (стадии РД). Согласование в государственных органах производится на основании проектной документации.</p>
 										</div>
 									</div>
-									<div class="col-6">
+									<div class="col-md-6 col-7">
 										<div class="image-slide">
 											<img src="img/service1.jpg" alt="alt">
 										</div>
@@ -171,13 +131,53 @@
 						<div class="swiper-slide">
 							<div class="content-slide">
 								<div class="row align-items-center">
-									<div class="col-6">
+									<div class="col-md-6 col-5">
 										<div class="title-small">ПРОЕКТНАЯ ДОКУМЕНТАЦИЯ, РАЗДЕЛЫ: <br>ПЗ, ПЗУ, АР, КР, ИОС</div>
 										<div class="text-slide">
 											<p>Стадия П разрабатывается для определения основных решений, сметной стоимости объекта, объемов работ и используемых при строительстве материалах, конструкциях, оборудовании. Условием для работы над проектной документацией является наличие задания на проектирование и исходно-разрешительной документации; в свою очередь, стадия П служит основой для рабочей документации (стадии РД). Согласование в государственных органах производится на основании проектной документации.</p>
 										</div>
 									</div>
-									<div class="col-6">
+									<div class="col-md-6 col-7">
+										<div class="image-slide">
+											<img src="img/service1.jpg" alt="alt">
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="btn-swipe swiper-button-prev"></div>
+					<div class="btn-swipe swiper-button-next"></div>
+				</div>
+				<div class="swiper swiper-card">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<div class="content-slide">
+								<div class="row align-items-center">
+									<div class="col-md-6 col-5">
+										<div class="title-small">ПРОЕКТНАЯ ДОКУМЕНТАЦИЯ, РАЗДЕЛЫ: <br>ПЗ, ПЗУ, АР, КР, ИОС</div>
+										<div class="text-slide">
+											<p>Стадия П разрабатывается для определения основных решений, сметной стоимости объекта, объемов работ и используемых при строительстве материалах, конструкциях, оборудовании. Условием для работы над проектной документацией является наличие задания на проектирование и исходно-разрешительной документации; в свою очередь, стадия П служит основой для рабочей документации (стадии РД). Согласование в государственных органах производится на основании проектной документации.</p>
+										</div>
+									</div>
+									<div class="col-md-6 col-7">
+										<div class="image-slide">
+											<img src="img/service1.jpg" alt="alt">
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="content-slide">
+								<div class="row align-items-center">
+									<div class="col-md-6 col-5">
+										<div class="title-small">ПРОЕКТНАЯ ДОКУМЕНТАЦИЯ, РАЗДЕЛЫ: <br>ПЗ, ПЗУ, АР, КР, ИОС</div>
+										<div class="text-slide">
+											<p>Стадия П разрабатывается для определения основных решений, сметной стоимости объекта, объемов работ и используемых при строительстве материалах, конструкциях, оборудовании. Условием для работы над проектной документацией является наличие задания на проектирование и исходно-разрешительной документации; в свою очередь, стадия П служит основой для рабочей документации (стадии РД). Согласование в государственных органах производится на основании проектной документации.</p>
+										</div>
+									</div>
+									<div class="col-md-6 col-7">
 										<div class="image-slide">
 											<img src="img/service1.jpg" alt="alt">
 										</div>
