--- a/projects.html
+++ b/projects.html
@@ -378,7 +378,7 @@
 						<div class="swiper-slide">
 							<div class="content-slide">
 								<div class="row align-items-center">
-									<div class="col-6">
+									<div class="col-md-6 col-5">
 										<div class="title-small">soft проект</div>
 										<div class="features-wrap">
 											<div class="item-feature">
@@ -411,7 +411,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="col-6">
+									<div class="col-md-6 col-7">
 										<div class="image-slide">
 											<img src="img/project2_1.jpg" alt="alt">
 										</div>
@@ -422,14 +422,14 @@
 						<div class="swiper-slide">
 							<div class="content-slide">
 								<div class="row align-items-center">
-									<div class="col-6">
+									<div class="col-md-6 col-5">
 										<div class="title-small">О проекте</div>
 										<div class="text-slide">
 											<p>Концептуальный коттеджный поселок бизнес-класса в Крыму на берегу моря у подножия горы Кастель. </p>
 											<p>Всего предусмотрено 56 таунхаусов в едином средиземноморском стиле. Каждый таунхаус имеет собственные патио и балконы. Вся инфраструктура продумана таким образом, чтобы каждый день выбирать отдых по душе.</p>
 										</div>
 									</div>
-									<div class="col-6">
+									<div class="col-md-6 col-7">
 										<div class="image-slide">
 											<img src="img/project1_2.jpg" alt="alt">
 										</div>
@@ -440,14 +440,14 @@
 						<div class="swiper-slide">
 							<div class="content-slide">
 								<div class="row align-items-center">
-									<div class="col-6">
+									<div class="col-md-6 col-5">
 										<div class="title-small">какую работу провели</div>
 										<div class="text-slide">
 											<p>Равным образом, постоянный количественный рост и сфера нашей активности обеспечивает актуальность анализа существующих паттернов поведения. </p>
 											<p>Как принято считать, представители современных социальных резервов формируют глобальную экономическую сеть и при этом — объявлены нарушающими общечеловеческие нормы этики и морали.</p>
 										</div>
 									</div>
-									<div class="col-6">
+									<div class="col-md-6 col-7">
 										<div class="image-slide">
 											<img src="img/project1_3.jpg" alt="alt">
 										</div>
